--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,14 @@
 {
-  "name": "angular-grunt-seed",
-  "version": "0.1.0",
+  "name": "poc-js-pdf",
+  "version": "0.0.1",
   "dependencies": {
     "jquery": "~2.1.0",
-    "angular": "~1.3.0",
-    "angular-animate": "~1.3.0",
-    "angular-resource": "~1.3.0",
-    "angular-route": "~1.3.0",
-    "angular-mocks": "~1.3.0",
-    "angular-sanitize": "~1.3.0",
-    "angular-touch": "~1.3.0"
+    "angular": "~1.5.0",
+    "angular-resource": "~1.5.0",
+    "angular-route": "~1.5.0",
+    "bootstrap": "~3.3.6"
   },
   "resolutions": {
-    "angular": "^1.4.8",
-    "angular-animate": "^1.4.8"
+    "angular": "^1.5.0"
   }
 }
