--- a/package.json
+++ b/package.json
@@ -1,52 +1,42 @@
 {
-  "name": "angular-grunt-seed",
+  "name": "poc-js-pdf",
   "version": "0.0.1",
-  "description": "Angular seed project with Grunt and Bower ready.",
+  "description": "Projet Angular pour générer des modèles de PDF.",
   "authors": [
-    "Srinivas Kusunam <skusunam@gmail.com>"
+    "Matt Demi"
   ],
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git@bitbucket.org:afterwork14/networkafterwork.git"
-  },
+  "repository": {},
+  "main": "./server.js",
   "scripts": {
-    "postinstall": "node node_modules/bower/bin/bower install"
+    "postinstall": "bower install && npm run bowerdep",
+    "bowerdep": "wiredep -s src/app/index.html",
+    "clean": "rimraf src/app/build/app.bundle.js",
+    "build": "browserify src/app/scripts/app.js > src/app/build/app.bundle.js",
+    "serve": "nodemon server.js --ignore src/app/build",
+    "livereload": "live-reload --port 9091 src/app/build",
+    "open": "opener http://localhost:9000",
+    "cbs": "npm run clean && npm run build && npm run open & parallelshell \"npm run serve\" \"npm run livereload\""
+    grunt call by mvn
   },
   "dependencies": {
     "body-parser": "^1.15.0",
     "bower": ">=1.3.1",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-cdnify": "^1.0.2",
-    "grunt-concurrent": "^2.1.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.6.0",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-filerev": "^2.3.1",
-    "grunt-ngmin": "0.0.3",
-    "grunt-svgmin": "^3.1.2",
-    "grunt-wiredep": "^2.0.0",
-    "html-pdf": "^1.5.0",
-    "load-grunt-tasks": "^3.4.0",
+    "browserify": "^13.0.0",
+    "express": "^4.13.4",
+    "rimraf": "^2.5.2",
+    "wiredep": "^3.0.0",
     "wkhtmltopdf": "^0.1.5"
   },
   "devDependencies": {
-    "express": ">=4.1.2",
-    "grunt": ">=0.4.3",
-    "grunt-newer": ">=0.7.0",
-    "time-grunt": ">=0.3.0",
-    "load-grunt-tasks": ">=0.4.0",
-    "grunt-load-options": ">=0.1.4",
-    "grunt-express-server": ">=0.4.17",
-    "grunt-contrib-watch": ">=0.6.0",
-    "grunt-contrib-clean": ">=0.5.0",
-    "grunt-contrib-less": ">=0.11.0",
-    "grunt-contrib-copy": ">=0.5.0",
-    "grunt-contrib-concat": ">=0.3.0",
-    "grunt-contrib-uglify": ">=0.4.0",
-    "grunt-contrib-jshint": ">=0.9.0",
-    "grunt-usemin": ">=2.1.1",
-    "connect-livereload": ">=0.4.0"
+    "angular": "^1.5.0",
+    "angular-resource": "^1.5.0",
+    "angular-route": "^1.5.0",
+    "http-server": "^0.9.0",
+    "jquery": "^2.2.1",
+    "live-reload": "^1.1.0",
+    "livereload": "^0.4.1",
+    "opener": "^1.4.1",
+    "parallelshell": "^2.0.0",
+    "reload": "^0.7.0"
   }
 }
